# AlphaEngine

./: .gitignore  CMakeLists.txt  Vcpkg.json  imgui.ini
.claude/: settings.local.json
AlphaApplication/: CMakeLists.txt
AlphaApplication/include/AlphaApplication/: AlphaApplication.h  Application.h
AlphaApplication/src/: Application.cpp
AlphaControler/: CMakeLists.txt
AlphaControler/include/AlphaControler/: AlphaControler.h  Input.h  Key.h  Keyboard.h  Mouse.h  MouseButton.h
AlphaControler/src/: Input.cpp  Keyboard.cpp  Mouse.cpp
AlphaGraphic/: CmakeLists.txt
AlphaGraphic/include/AlphaGraphic/: AlphaGraphic.h
AlphaGraphic/include/AlphaGraphic/buffer/: EBO.h  FBO.h  SSBO.h  UBO.h  VAO.h  VBO.h
AlphaGraphic/include/AlphaGraphic/core/: BVHBuilder.h  BufferManager.h  Framebuffer.h  FullscreenQuad.h  RenderProxy.h  Renderer.h  RendererConfig.h
AlphaGraphic/include/AlphaGraphic/mesh/: Mesh.h  StaticMesh.h
AlphaGraphic/include/AlphaGraphic/scene/: Camera.h  Material.h  Model.h  Transform.h
AlphaGraphic/include/AlphaGraphic/scene/light/: DirectionalLight.h  Light.h  PointLight.h  SpotLight.h
AlphaGraphic/include/AlphaGraphic/scene/material/: Material.h  MaterialInstance.h  MaterialLibrary.h
AlphaGraphic/include/AlphaGraphic/shader/: ComputeShader.h  Shader.h  ShaderLibrary.h
AlphaGraphic/include/AlphaGraphic/texture/: Rendertexture.h  Texture.h  Texture2D.h  TextureCubemap.h
AlphaGraphic/src/buffer/: EBO.cpp  FBO.cpp  SSBO.cpp  UBO.cpp  VAO.cpp  VBO.cpp
AlphaGraphic/src/core/: BVHBuilder.cpp  BufferManager.cpp  Framebuffer.cpp  FullscreenQuad.cpp  Renderer.cpp  RendererConfig.cpp
AlphaGraphic/src/mesh/: StaticMesh.cpp
AlphaGraphic/src/scene/: Camera.cpp  Material.cpp  Model.cpp  Transform.cpp
AlphaGraphic/src/scene/light/: DirectionalLight.cpp  PointLight.cpp  SpotLight.cpp
AlphaGraphic/src/scene/material/: Material.cpp  MaterialInstance.cpp  MaterialLibrary.cpp
AlphaGraphic/src/shader/: ComputeShader.cpp  Shader.cpp  ShaderLibrary.cpp
AlphaGraphic/src/texture/: Rendertexture.cpp  Texture2D.cpp  TextureCubemap.cpp
AlphaMessenger/: CMakeLists.txt
AlphaMessenger/include/AlphaMessenger/: AlphaMessenger.h  EventBus.h  Signal.h  Types.h
AlphaScene/: CMakeLists.txt
AlphaScene/include/AlphaScene/: Actor.h  AlphaScene.h  CameraComponent.h  Component.h  ComponentRegistry.h  InputComponent.h  LightComponent.h  MeshComponent.h  RenderContext.h  World.h
AlphaScene/src/: Actor.cpp  CameraComponent.cpp  ComponentRegistry.cpp  InputComponent.cpp  LightComponent.cpp  MeshComponent.cpp  World.cpp
AlphaUtil/: CMakeLists.txt
AlphaUtil/include/AlphaUtil/: AlphaUtil.h  Json.h
AlphaUtil/src/: Json.cpp
AlphaWindow/: CMakeLists.txt
AlphaWindow/include/AlphaWindow/: AlphaWindow.h  Window.h  WindowConfig.h  WindowState.h
AlphaWindow/src/: Window.cpp  WindowConfig.cpp
Sandbox/: CMakeLists.txt
Sandbox/assets/config/: renderer.json  window.json
Sandbox/assets/scenes/: main.json
Sandbox/assets/shaders/: Lit.frag  Lit.vert  Raytracer.comp  Triangle.frag  Triangle.vert
Sandbox/include/: ActorFactory.h  OrbitComponent.h  Sandbox.h
Sandbox/src/: Sandbox.cpp  Sandbox.h  main.cpp
docs/: API.md  RayTracing_CodeComparison.md  RayTracing_FeatureBranch.md  RayTracing_Glossary.md
